# DIP_LAB

./: .gitignore  pyproject.toml  requirements.txt
code/: class4.py  class5.py  class6.py  class7.py  class8.py  fft.ipynb  hw10.ipynb  hw11.py  hw12.py  hw13.py  hw15.ipynb  hw16.ipynb  hw17.ipynb  hw18.ipynb  hw20.ipynb  hw3.py  hw5.py  hw9.ipynb  lab-2.py  practice.py
compression/results/: metrics_all.csv
compression/src/: dct_compression.py  dwt_compression.py  low_bit_quantization.py  palette_quantization.py  rgb332_quantization.py  rle_compression.py  utils.py
final_lab/: q10.py  q11.py  q12.py  q13.py  q15.py  q2.ipynb  q3.ipynb  q4.py  q5.py  q6.py  q7.py  q8.py  q9.py
final_lab/zahinDIP/: zahin_dip.py
old/: class2.py  class3.py  class6.py  class9.py  hw0.py  hw1.py  hw10.py  hw4.py  hw6.py  image.py  lab-1.py  lab-3.py
