[project]
name = "dip-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "ipykernel>=7.0.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.6",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "pillow==11.3.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pywavelets>=1.9.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "six==1.17.0",
]
